Fix carousel spacing

--- a/assets/setup-wizard/theme/carousel.scss
+++ b/assets/setup-wizard/theme/carousel.scss
@@ -10,6 +10,7 @@
 
 	&__slider {
 		display: flex;
+		margin: 0;
 		transition: 0.5s transform;
 		cursor: grab;
 
@@ -17,6 +18,7 @@
 			flex: 0 0 100%;
 			width: 100%;
 			padding: 0 20px;
+			margin: 0;
 			box-sizing: border-box;
 		}
 
